@@ -3,6 +3,7 @@ $Id$
 2005-09-03 Tilman Sauerbeck (tilman at code-monkey de)
         * src/plugin/imap.c: Merged Sebastian Dransfeld's patch that
           implents "connection sharing"
+        * src/plugin/pop3.c: Updated for recent imap changes
 
 2005-08-29 Michael Jennings (mej at eterm org)
         * Makefile.am, embrace.spec:  Applied patch from Jim Perrin
